# librelane

./: .coveragerc  .coveragerc-steps  .flake8  .gitattributes  .gitmodules  Authors.md  Changelog.md  Makefile  Readme.md  default.nix  flake.nix  notebook.ipynb  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/build_nix/: action.yml
.github/scripts/: compare_metrics.js  generate_tag.py  gh.py
.github/test_sets/: get_test_matrix.py
.github/workflows/: ci.yml
docs/_ext/: generate_configvar_docs.py  migration_comparison.py
docs/_templates/generate_configvar_docs/: common_pdk_vars.md  common_vars.md  flows.md  steps.md
docs/source/: additional_material.md  faq.md  glossary.md  index.md
docs/source/contributors/: ci.md  classes.md  code.md  docs.md  updating_tools.md
docs/source/getting_started/: index.md  installation_overview.md
docs/source/getting_started/migrants/: index.md  variables.md
docs/source/reference/: architecture.md  configuration.md  index.md
docs/source/usage/: about_pdks.md  index.md  pdn.md  using_macros.md  writing_custom_flows.md  writing_custom_steps.md  writing_plugins.md
librelane/: __main__.py  container.py  env_info.py
librelane/common/: __init__.py  misc.py  types.py
librelane/common/metrics/: __main__.py
librelane/config/: __main__.py  config.py  flow.py  variable.py
librelane/flows/: classic.py  cli.py  flow.py  optimizing.py
librelane/scripts/odbpy/: power_utils.py
librelane/scripts/openroad/: gui.tcl
librelane/state/: design_format.py  state.py
librelane/steps/: __init__.py  __main__.py  odb.py  openroad.py  pyosys.py  step.py
nix/: create-shell.nix  docker.nix
test/common/: test_toolbox.py
test/flows/: test_flow.py
test/ioplace_parser/: conftest.py  test_parse.py
test/steps/: test_all_steps.py  test_step.py  test_tclstep.py
(+12 files in other folders)
